--- a/.github/workflows/sh.v4.yaml
+++ b/.github/workflows/sh.v4.yaml
@@ -39,7 +39,7 @@ jobs:
           gh extension install katiem0/gh-environments
           echo "Extension installed successfully"
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
 
       - name: List existing environments
         if: ${{ inputs.action == 'list-env' }}
@@ -47,7 +47,7 @@ jobs:
           echo "Listing environments for organization: ${{ inputs.organization }}"
           gh environments list ${{ inputs.organization }} ${{ inputs.repository }} --output-file verification-report.csv
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
       - name: Upload reports as artifacts
         if: ${{ inputs.action == 'list' || inputs.action == 'full-setup' }}
         uses: actions/upload-artifact@v4
