--- a/.github/workflows/sh.v4.yaml
+++ b/.github/workflows/sh.v4.yaml
@@ -71,7 +71,7 @@ jobs:
         if: ${{ inputs.action == 'create-envs' }}
         run: |
           echo "Create environments for organization: ${{ inputs.organization }}"
-          gh environments create ${{ inputs.organization }}/${{ inputs.repository }} --from-file .\${{ inputs.filename }}
+          gh environments create ${{ inputs.organization }}/${{ inputs.repository }} --from-file ./${{ inputs.filename }}
         env:
           GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
 
@@ -79,7 +79,7 @@ jobs:
         if: ${{ inputs.action == 'create-vars' }}
         run: |
           echo "Create environments variables for organization: ${{ inputs.organization }}"
-          gh environments variables create ${{ inputs.organization }} --from-file .\${{ inputs.filename }}
+          gh environments variables create ${{ inputs.organization }} --from-file ./${{ inputs.filename }}
 
         env:
           GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
