--- a/.github/workflows/sh.v4.yaml
+++ b/.github/workflows/sh.v4.yaml
@@ -70,8 +70,8 @@ jobs:
       - name: Create environment
         if: ${{ inputs.action == 'create-envs' }}
         run: |
-          echo "Create environments for organization: ${{ inputs.organization }}"
-          gh environments create ${{ inputs.organization }}/${{ inputs.repository }} --from-file ./${{ inputs.filename }}
+          echo "Create environments for organization: ${{ inputs.organization }}"          
+          gh environments create ${{ inputs.organization }} --from-file ./${{ inputs.filename }}
         env:
           GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
 
@@ -80,7 +80,6 @@ jobs:
         run: |
           echo "Create environments variables for organization: ${{ inputs.organization }}"
           gh environments variables create ${{ inputs.organization }} --from-file ./${{ inputs.filename }}
-
         env:
           GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
       - name: Upload reports as artifacts
