--- a/.github/workflows/sh.v4.yaml
+++ b/.github/workflows/sh.v4.yaml
@@ -12,6 +12,7 @@ on:
         options:
           - list-envs
           - list-vars
+          - list-envs+list-vars
           - create-envs
           - create-vars
       organization:
@@ -52,7 +53,7 @@ jobs:
           pwd
 
       - name: List existing environments
-        if: ${{ inputs.action == 'list-envs' }}
+        if: ${{ inputs.action == 'list-envs' || inputs.action == 'list-envs+list-vars' }}
         run: |
           echo "Listing environments for organization: ${{ inputs.organization }}"
           gh environments list ${{ inputs.organization }} ${{ inputs.repository }} --output-file verification-report.csv
@@ -60,7 +61,7 @@ jobs:
           GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
 
       - name: List existing environments
-        if: ${{ inputs.action == 'list-vars' }}
+        if: ${{ inputs.action == 'list-vars' || inputs.action == 'list-envs+list-vars' }}
         run: |
           echo "Listing environments for organization: ${{ inputs.organization }}"
           gh environments variables list ${{ inputs.organization }} ${{ inputs.repository }} --output-file verification-variables-report.csv
@@ -83,7 +84,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.OWN_GITHUB_TOKEN_TST }}
       - name: Upload reports as artifacts
-        if: ${{ inputs.action == 'list-envs' || inputs.action == 'list-vars' }}
+        if: ${{ inputs.action == 'list-envs' || inputs.action == 'list-vars' || inputs.action == 'list-envs+list-vars' }}
         uses: actions/upload-artifact@v4
         with:
           name: environment-reports
